# Backend_API/docs/swagger.json
@@ -431,16 +431,23 @@
         "models.Book": {
             "type": "object",
             "properties": {
-                "author": {
-                    "type": "string"
-                },
                 "genre": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
+                "img_url": {
+                    "type": "string"
+                },
                 "published_year": {
+                    "type": "integer"
+                },
+                "publisher": {
+                    "$ref": "#/definitions/models.User"
+                },
+                "publisher_id": {
+                    "description": "Foreign Key",
                     "type": "integer"
                 },
                 "quantity": {
@@ -454,6 +461,12 @@
         "models.User": {
             "type": "object",
             "properties": {
+                "books": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Book"
+                    }
+                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -465,6 +478,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "img_src": {
+                    "type": "string"
                 },
                 "last_name": {
                     "type": "string"
