# Backend_API/internal/models/Book.go
@@ -7,7 +7,7 @@ type Book struct {
 	Quantity      int    `json:"quantity"`
 	Genre         string `gorm:"size:100" json:"genre"`
 	Img_url       string `json:"img_url"`
-	
-	PublisherID   int    `json:"publisher_id"` // Foreign Key
-	Publisher     User   `gorm:"foreignKey:PublisherID" json:"publisher"`
+
+	PublisherID int   `json:"publisher_id"` // Foreign Key
+	Publisher   *User `gorm:"foreignKey:PublisherID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;" json:"publisher,omitempty"`
 }
